--- a/spring-boot/src/main/resources/templates/login.hbs
+++ b/spring-boot/src/main/resources/templates/login.hbs
@@ -29,7 +29,10 @@
     <a class="sign-up" href="/users/form">회원가입</a>
     <a class="find-password" href="/users/password">비밀번호 찾기</a>
 </div>
-
+<div id="demo-snackbar-example" class="mdl-js-snackbar mdl-snackbar">
+    <div class="mdl-snackbar__text"></div>
+    <button class="mdl-snackbar__action" type="button"></button>
+</div>
 {{> include/footer}}
 <script type="text/javascript" src="/js/login.js"></script>
 </body>
