admin pages publishing & link at header

--- a/spring-boot/src/main/resources/templates/administrator.hbs
+++ b/spring-boot/src/main/resources/templates/administrator.hbs
@@ -2,14 +2,13 @@
 <html>
 <head>
     {{> include/head}}
-    <title>프로젝트 관리</title>
+    <title>관리자</title>
     <link rel="stylesheet" href="/css/adminProject.css">
     <link href="https://cdn.quilljs.com/1.0.0/quill.snow.css" rel="stylesheet">
 </head>
 <body>
 {{> include/header}}
 <main>
-    <a href="/administrator/projects" class="move-projects"><< 제안목록으로</a>
     <div class="page">
         <h3>몰카 판매 금지 법안을 제안합니다.</h3>
         <div class="options">
