--- a/spring-boot/src/main/resources/templates/adminProjects.hbs
+++ b/spring-boot/src/main/resources/templates/adminProjects.hbs
@@ -34,6 +34,6 @@
 
 </table>
 {{> include/footer}}
-<script type="text/javascript" src="/js/adminProjects.js"></script>
+<script type="text/javascript" src="/dist/adminProjects-bundle.js"></script>
 </body>
 </html>
