--- a/spring-boot/src/main/resources/templates/findPassword.hbs
+++ b/spring-boot/src/main/resources/templates/findPassword.hbs
@@ -23,6 +23,6 @@
         <button class="mdl-snackbar__action" type="button"></button>
     </div>
     {{> include/footer}}
-    <script type="text/javascript" src="/js/findPassword.js"></script>
+    <script type="text/javascript" src="/dist/findPassword-bundle.js"></script>
 </body>
 </html>
