--- a/spring-boot/src/main/resources/public/css/project.css
+++ b/spring-boot/src/main/resources/public/css/project.css
@@ -121,6 +121,55 @@ li.status.active {
     background-color: #fbef03;
 }
 
+.guide:before {
+    content: '';
+    position: absolute;
+    border-bottom: 20px solid rgba(0,0,0,.14);
+    border-right: 10px solid transparent;
+    border-left: 10px solid transparent;
+    top: -18px;
+    left: 50px;
+
+}
+
+.guide:after {
+    content: '';
+    position: absolute;
+    border-bottom: 20px solid #ffffff;
+    border-right: 10px solid transparent;
+    border-left: 10px solid transparent;
+    top: -16px;
+    left: 50px;
+
+}
+
+.guide {
+    position: absolute;
+    margin: 15px auto;
+    width: 300px;
+    background-color: #ffffff;
+    box-shadow:
+            0 2px 2px 0 rgba(0,0,0,.14),
+            0 3px 1px -2px rgba(0,0,0,.2),
+            0 1px 5px 0 rgba(0,0,0,.12);
+    padding: 15px;
+    display: none;
+}
+
+.guide.is-visible {
+    display: block;
+}
+
+img.guide-image {
+    width: 90%;
+    margin: 10px auto;
+    padding: 5%;
+    box-shadow:
+            0 2px 2px 0 rgba(0,0,0,.14),
+            0 3px 1px -2px rgba(0,0,0,.2),
+            0 1px 5px 0 rgba(0,0,0,.12);
+}
+
 .step:hover {
     cursor: pointer;
 }
@@ -130,7 +179,7 @@ li.status.active {
     height: 30px;
     display: inline-block;
     border-radius: 3em;
-    background-image: url("/img/profile.png");
+    background-image: url("/img/baseline-account_circle-24px.svg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -474,6 +523,36 @@ button.likes {
     ul.share-list {
         float: right;
         margin: -60px 0 0 0;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .matching.guide {
+        margin: 15px 0 0 -120px;
+    }
+
+    .matching.guide:before {
+        top: -18px;
+        left: 150px;
+    }
+
+    .matching.guide:after {
+        top: -15px;
+        left: 150px;
+    }
+
+    .running.guide {
+        margin: 15px 0 0 -200px;
+    }
+
+    .running.guide:before {
+        top: -18px;
+        left: 230px;
+    }
+
+    .running.guide:after {
+        top: -15px;
+        left: 230px;
     }
 }
 
