--- a/spring-boot/src/main/resources/templates/index.hbs
+++ b/spring-boot/src/main/resources/templates/index.hbs
@@ -108,8 +108,6 @@
         </div>
     </div>
     {{> include/footer}}
-    <!--<script type="text/javascript" src="/dist/index-bundle.js"></script>-->
-<script type="text/javascript" src="/js/carousel.js"></script>
-<script type="text/javascript" src="/js/mainProjects.js"></script>
+    <script type="text/javascript" src="/dist/index-bundle.js"></script>
 </body>
 </html>
