--- a/spring-boot/src/main/resources/templates/projectForm.hbs
+++ b/spring-boot/src/main/resources/templates/projectForm.hbs
@@ -193,7 +193,7 @@
 </main>
 <!--<script src="https://cdn.quilljs.com/1.0.0/quill.js"></script>-->
 <script src="https://cdn.ckeditor.com/4.10.0/standard-all/ckeditor.js"></script>
-<script type="text/javascript" src="/js/projectForm.js"></script>
+<script type="text/javascript" src="/dist/projectForm-bundle.js"></script>
 {{> include/footer}}
 </body>
 </html>
