--- a/spring-boot/src/main/resources/templates/projectSearch.hbs
+++ b/spring-boot/src/main/resources/templates/projectSearch.hbs
@@ -34,6 +34,6 @@
     </ul>
 </main>
 {{> include/footer}}
-<script type="text/javascript" src="/js/projectSearch.js"></script>
+<script type="text/javascript" src="/dist/projectSearch-bundle.js"></script>
 </body>
 </html>
