--- a/spring-boot/src/main/resources/public/css/mainProjects.css
+++ b/spring-boot/src/main/resources/public/css/mainProjects.css
@@ -16,6 +16,7 @@ label.subject {
 }
 
 div.subject hr {
+    display: block;
     margin: auto;
     width: 30px;
     height: 5px;
@@ -64,7 +65,10 @@ li.project.long {
 .project-img {
     width: 100%;
     height: 250px;
-    background-color: palevioletred;
+    background-image: url("/img/logo-icon.png");
+    background-size: 140%;
+    background-position: center;
+    border-bottom: solid 1px #b2b2b2;
 }
 
 .project .status {
