--- a/spring-boot/src/main/resources/public/css/projectList.css
+++ b/spring-boot/src/main/resources/public/css/projectList.css
@@ -82,8 +82,10 @@ li.project.long {
 .project-img {
     width: 100%;
     height: 250px;
-    background-color: palevioletred;
-}
+    background-image: url("/img/logo-icon.png");
+    background-size: 140%;
+    background-position: center;
+    border-bottom: solid 1px #b2b2b2;}
 
 .project .status {
     float: right;
