--- a/spring-boot/src/main/resources/templates/include/footer.hbs
+++ b/spring-boot/src/main/resources/templates/include/footer.hbs
@@ -6,8 +6,8 @@
     <div class="right-side">
         <p>info@toktok.io</p>
         <ul class="account-list">
-            <li class="facebook"></li>
-            <li class="twitter"></li>
+            <a href="http://www.facebook.com/sharer/sharer.php?u=www.toktok.io"><li class="facebook"></li></a>
+            <a href="https://twitter.com/intent/tweet?text=TEXT&url=www.toktok.io"><li class="twitter"></li></a>
             <li class="kakao"></li>
         </ul>
     </div>
