--- a/spring-boot/src/main/resources/templates/login.hbs
+++ b/spring-boot/src/main/resources/templates/login.hbs
@@ -10,9 +10,9 @@
 <div class="social-login-zone">
     <h1>Log in</h1>
     <ul class="social-login-list">
-        <li class="social-login facebook"><a href="#">Facebook 로그인</a></li>
-        <li class="social-login twitter"><a href="#">Twitter 로그인</a></li>
-        <li class="social-login kakao"><a href="#">Kakao 로그인</a></li>
+        <a href="/users/auth/facebook"><li class="social-login facebook">Facebook 로그인</li></a>
+        <a href="/users/auth/twitter"><li class="social-login twitter">Twitter 로그인</li></a>
+        <a href="/users/auth/kakao"><li class="social-login kakao">Kakao 로그인</li></a>
     </ul>
 </div>
 
