--- a/spring-boot/src/main/resources/templates/adminCommittees.hbs
+++ b/spring-boot/src/main/resources/templates/adminCommittees.hbs
@@ -11,6 +11,7 @@
 <main>
     <div class="page">
         <h1>상임위원회 관리</h1>
+        {{committees}}
         <table class="committees">
             <thead>
                 <hr>
