--- a/spring-boot/src/main/resources/templates/index.hbs
+++ b/spring-boot/src/main/resources/templates/index.hbs
@@ -48,8 +48,8 @@
                         <div class="project-summary">
                             <h5>{{this.title}}</h5>
                             <div class="percentage-zone"><div class="percentage"></div></div>
-                            <p class="count">{{this.participations_count}}명</p>
-                            <p class="percentage-number" data-item="{{this.participations_goal_count}}">78%</p>
+                            <p class="count" data-item="{{this.participations_count}}">{{this.participations_count}}명</p>
+                            <p class="percentage-number" data-item="{{this.participations_goal_count}}">-</p>
                         </div>
                     </li>
                 </a>
@@ -98,8 +98,8 @@
                         <div class="project-summary">
                             <h5>{{this.title}}</h5>
                             <div class="percentage-zone"><div class="percentage"></div></div>
-                            <p class="count">{{this.participations_count}}명</p>
-                            <p class="percentage-number" data-item="{{this.participations_goal_count}}">78%</p>
+                            <p class="count" data-item="{{this.participations_count}}">{{this.participations_count}}명</p>
+                            <p class="percentage-number" data-item="{{this.participations_goal_count}}">-</p>
                         </div>
                     </li>
                 </a>
