--- a/spring-boot/src/main/resources/public/css/mainProjects.css
+++ b/spring-boot/src/main/resources/public/css/mainProjects.css
@@ -71,6 +71,10 @@ li.project.long {
     border-bottom: solid 1px #b2b2b2;
 }
 
+.long .project-img {
+    background-size: 100%;
+}
+
 .project .status {
     float: right;
     background-color: #fbef03;
