--- a/spring-boot/src/main/resources/templates/adminProject.hbs
+++ b/spring-boot/src/main/resources/templates/adminProject.hbs
@@ -11,16 +11,16 @@
 <main>
     <a href="/administrator/projects" class="move-projects"><< 제안목록으로</a>
     <div class="page">
-        <h3>몰카 판매 금지 법안을 제안합니다.</h3>
+        <h3 id="{{project.id}}">{{project.title}}</h3>
         <div class="options">
             <a href="/administrator/projectForm/1"><button class="projectForm">제안 내용 수정</button></a>
             <button class="participation-list">참여 리스트 다운</button>
-            <button class="update-timeline">타임라인 수정</button>
+            <a href="/administrator/projects/{{project.id}}/timelines"><button class="update-timeline">타임라인 수정</button></a>
             <button class="suggestions">건의 내용 확인</button>
         </div>
         <div class="input-zone">
             <label for="status">프로젝트 상태('매칭실패' 또는 '입법활동' 상태만 선택할 수 있습니다. (나머지 상태는 참여자수에 따라 자동으로 설정됩니다)</label>
-            <select id="status">
+            <select id="status" data-item="{{project.status}}">
                 <option>해당사항 없음</option>
                 <option>입법 활동</option>
                 <option>매칭 실패</option>
@@ -35,100 +35,34 @@
 
         <div class="input-zone">
             <label for="goal-count">목표 참여인원</label>
-            <input type="number" id="goal-count" value="1000">
+            <input type="number" id="goal-count" value="{{project.participations_goal_count}}">
         </div>
 
         <div class="input-zone">
             <label for="platform-uri">입법 플랫폼 URI</label>
-            <input id="platform-uri">
+            <input id="platform-uri" value="{{project.running_platform_url}}">
         </div>
 
         <div class="input-zone">
             <form>
                 <label for="platform-uri">의원 목록</label>
-                <h6>의원/위원회 관리</h6>
+                <h6 data-item="{{project.committees}}" id="admin-committees">의원/위원회 관리</h6>
+                <input id="committee-date" placeholder="설정 날짜">
                 <div class="committee-zone">
-                    <div class="each-committee">
-                        <h5 class="committee-name">여성가족위원회</h5>
-                        <button class="remove-committee-btn">상임위 삭제</button>
-                        <ul>
-                            <li>
-                                <p class="name">권미혁</p>
-                                <button class="remove-assemblyman-btn">의원 삭제</button>
-                                <br>
-                                <p class="status-label">응답 상태</p>
-                                <select class="participation-status">
-                                    <option data-item="no-response">무응답</option>
-                                    <option data-item="accept">참여</option>
-                                    <option data-item="reject">거절</option>
-                                </select>
-                                <textarea class="comment" placeholder="의원 한마디"></textarea>
-                            </li>
-                            <li>
-                                <p class="name">남인순</p>
-                                <select class="participation-status">
-                                    <option data-item="no-response">무응답</option>
-                                    <option data-item="accept">참여</option>
-                                    <option data-item="reject">거절</option>
-                                </select>
-                                <textarea class="comment"></textarea>
-                            </li>
-                            <li>
-                                <p class="name">금태섭</p>
-                                <select class="participation-status">
-                                    <option data-item="no-response">무응답</option>
-                                    <option data-item="accept">참여</option>
-                                    <option data-item="reject">거절</option>
-                                </select>
-                                <textarea class="comment"></textarea>
-                            </li>
-                            <li>
-                                <p class="name">김삼화</p>
-                                <select class="participation-status">
-                                    <option data-item="no-response">무응답</option>
-                                    <option data-item="accept">참여</option>
-                                    <option data-item="reject">거절</option>
-                                </select>
-                                <textarea class="comment"></textarea>
-                            </li>
-                            <li>
-                                <p class="name">김승희</p>
-                                <select class="participation-status">
-                                    <option data-item="no-response">무응답</option>
-                                    <option data-item="accept">참여</option>
-                                    <option data-item="reject">거절</option>
-                                </select>
-                                <textarea class="comment"></textarea>
-                            </li>
-                            <li>
-                                <p class="name">박경미</p>
-                                <select class="participation-status">
-                                    <option data-item="no-response">무응답</option>
-                                    <option data-item="accept">참여</option>
-                                    <option data-item="reject">거절</option>
-                                </select>
-                                <textarea class="comment"></textarea>
-                            </li>
-                        </ul>
-                        <hr>
-                        <input class="add-assemblyman">
-                        <button>의원 추가</button>
-                    </div>
-
-                    <label for="add-committee">상임위 추가하기</label>
-                    <input id="add-committee">
+                    <label id="label-add-committee" for="input-add-committee">상임위 추가하기</label>
+                    <input id="input-add-committee">
                     <button id="add-committee-btn">추가</button>
                 </div><!--div.committee-zone-->
             </form>
         </div> <!--div.input-zone-->
         <div class="page-move-btns">
-            <button type="submit">변경사항 저장</button>
+            <button class="submit" type="submit">변경사항 저장</button>
         </div>
     </div>
 </main>
 <!--<script src="https://cdn.quilljs.com/1.0.0/quill.js"></script>-->
 <script src="https://cdn.ckeditor.com/4.10.0/standard-all/ckeditor.js"></script>
-<script type="text/javascript" src="/js/projectForm.js"></script>
+<script type="text/javascript" src="/dist/adminProject-bundle.js"></script>
 {{> include/footer}}
 </body>
 </html>
