--- a/spring-boot/src/main/resources/templates/adminProjectTimelines.hbs
+++ b/spring-boot/src/main/resources/templates/adminProjectTimelines.hbs
@@ -12,7 +12,7 @@
     <a href="/administrator/projects" class="move-projects"><< 프로젝트 관리로</a>
     <div class="page">
         <h1>제안 타임라인 수정</h1>
-        <h2>여기에 프로젝트 이름</h2>
+        <h2 data-item="{{project.id}}">{{project.title}}</h2>
         <table class="timelines">
             <thead>
                 <hr>
@@ -22,23 +22,25 @@
                     <th class="act">관리</th>
             </thead>
             <tbody>
-                <tr>
-                    <td>2018-02-01</td>
-                    <td>진선미 의원이 대표발의한 ‘위장형카메라의 관리에 대한 법률 제정안’이 2018년 1월 31일 행정안전위원회 전체회의에서 법안심사소위원회로 회부되었습니다. 앞으로 법안심사소위원회에서 이 법안에 대한 세부 심사가 이루어지게 됩니다.</td>
-                    <td>국회 소식</td>
+                {{#each timelines}}
+                <tr id="{{this.id}}">
+                    <td>{{this.created_at}}</td>
+                    <td>{{this.body}}</td>
+                    <td>{{this.subject}}</td>
                     <td>
-                        <button>수정</button>
-                        <button>삭제</button>
+                        <button class="update-timeline-btn">수정</button>
+                        <button class="remove-timeline-btn">삭제</button>
                     </td>
                 </tr>
+                {{/each}}
             </tbody>
         </table>
     </div>
     <div class="add-timeline-zone">
         <h3>새 타임라인 내용 추가</h3>
-        <input type="date" class="input-date">
-        <textarea class="timeline-contents" placeholder="내용을 입력해주세요."></textarea>
-        <select class="subject">
+        <input type="date" id="input-date">
+        <textarea id="input-timeline-contents" placeholder="내용을 입력해주세요."></textarea>
+        <select id="subject">
             <option>소식</option>
             <option>의원 한 마디</option>
         </select>
@@ -47,7 +49,7 @@
 </main>
 <!--<script src="https://cdn.quilljs.com/1.0.0/quill.js"></script>-->
 <script src="https://cdn.ckeditor.com/4.10.0/standard-all/ckeditor.js"></script>
-<script type="text/javascript" src="/js/projectForm.js"></script>
+<script type="text/javascript" src="/dist/adminProjectTimelines-bundle.js"></script>
 {{> include/footer}}
 </body>
 </html>
