--- a/spring-boot/src/main/resources/templates/adminProjects.hbs
+++ b/spring-boot/src/main/resources/templates/adminProjects.hbs
@@ -20,6 +20,7 @@
                     <option>전체</option>
                     <option>시민참여</option>
                     <option>매칭중</option>
+                    <option>입법활동</option>
                     <option>매칭실패</option>
                 </select>
             </th>
