--- a/spring-boot/src/main/resources/templates/projectForm.hbs
+++ b/spring-boot/src/main/resources/templates/projectForm.hbs
@@ -16,8 +16,13 @@
                     <h1>국회에 직접 입법제안을 보내세요.<br>
                         시민의 제안으로 법안을 만듭니다.</h1>
                     <h2>청원제안 요건</h2>
-                    <p>작성된 내용은 다른 참여자들의 동의의사가 반영된 제안이기 때문에 타인의 탐여 이후 수정 및 삭제가 불가능합니다.<br>
-                        또한 제안하시려는 내용과 중복되는 기존 제안이 있는지 확인 후 제안해주세요.</p>
+                    <p>작성된 내용은 다른 참여자들의 동의의사가 반영된 제안이기 때문에 타인의 참여 이후 수정 및 삭제가 불가능합니다.<br>
+                        또한 제안하시려는 내용과 중복되는 기존 제안이 있는지 확인 후 제안해주세요. <br>
+                        매칭 실패한 제안과 동일한 내용이 30일 이내에 다시 올라온 경우 중복제안게시판으로 이동합니다.<br>
+                        혐오발언, 욕설은 관리자에 의해 삭제될 수 있습니다.<br>
+                        국회톡톡의 제안은 특정한 개인 또는 단체의 이익이 아니라, 공익적 목적을 지향합니다.<br>
+                        시민제안의 내용은 국회톡톡의 입장과 다를 수 있습니다.
+                    </p>
                 </td>
             </tr>
             <tr class="button">
@@ -122,11 +127,19 @@
                     <br>
                     <label for="category">분야</label>
                     <ul class="category-list" id="category">
-                        <li>노동</li>
-                        <li>환경</li>
-                        <li>안보</li>
+                        <li>정치</li>
+                        <li>경제/일자리</li>
+                        <li>외교/통일/국방</li>
                         <li>보건복지</li>
-                        <li>행정</li>
+                        <li>환경/생태</li>
+                        <li>육아/교육</li>
+                        <li>동물권</li>
+                        <li>문화/언론</li>
+                        <li>저출산/고령화대책</li>
+                        <li>교통/건축/국토</li>
+                        <li>경제민주화</li>
+                        <li>인권/성평등</li>
+                        <li>기타</li>
                     </ul>
                 </td>
             </tr>
