--- a/spring-boot/src/main/resources/templates/my.hbs
+++ b/spring-boot/src/main/resources/templates/my.hbs
@@ -9,7 +9,6 @@
 {{> include/header}}
 <main>
     <h1>마이페이지</h1>
-
     <div class="demo-card-square mdl-card mdl-shadow--2dp">
         <div class="mdl-card__title mdl-card--expand">
             <h2 class="mdl-card__title-text">Click to change</h2>
@@ -65,39 +64,39 @@
         </nav>
 
         <ul class="project-list proposals">
-            <a href="/projects/1">
-                <li class="project">
-                    <div class="project-img">
-                        <div class="status">시민참여</div>
-                    </div>
-                    <div class="project-summary">
-                        <h5>내가 작성한 제안들</h5>
-                        <div class="percentage-zone">
-                            <div class="percentage"></div>
+            {{#each proposals}}
+                <a href="/projects/{{this.id}}">
+                    <li class="project">
+                        <div class="project-img">
+                            <div class="status" data-item="{{this.status}}">시민참여</div>
                         </div>
-                        <p class="count">1340명</p>
-                        <p class="percentage-number" data-item="1000">78%</p>
-                    </div>
-                </li>
-            </a>
+                        <div class="project-summary">
+                            <h5>{{this.title}}</h5>
+                            <div class="percentage-zone"><div class="percentage"></div></div>
+                            <p class="count" data-item="{{this.participations_count}}">{{this.participations_count}}명</p>
+                            <p class="percentage-number" data-item="{{this.participations_goal_count}}"></p>
+                        </div>
+                    </li>
+                </a>
+            {{/each}}
         </ul>
 
         <ul class="project-list participations">
-            <a href="/projects/1">
-                <li class="project">
-                    <div class="project-img">
-                        <div class="status">시민참여</div>
-                    </div>
-                    <div class="project-summary">
-                        <h5>내가 참여한 제안들</h5>
-                        <div class="percentage-zone">
-                            <div class="percentage"></div>
+            {{#each participations}}
+                <a href="/projects/{{this.id}}">
+                    <li class="project">
+                        <div class="project-img">
+                            <div class="status" data-item="{{this.status}}">시민참여</div>
                         </div>
-                        <p class="count">1340명</p>
-                        <p class="percentage-number" data-item="1000">78%</p>
-                    </div>
-                </li>
-            </a>
+                        <div class="project-summary">
+                            <h5>{{this.title}}</h5>
+                            <div class="percentage-zone"><div class="percentage"></div></div>
+                            <p class="count" data-item="{{this.participations_count}}">{{this.participations_count}}명</p>
+                            <p class="percentage-number" data-item="{{this.participations_goal_count}}"></p>
+                        </div>
+                    </li>
+                </a>
+            {{/each}}
         </ul>
     </div>
 
